@@ -40,8 +40,6 @@
 
 <p>To apply stress, refer to <a href="./option_stress.html">option <code>-stress</code></a>.</p>
 
-<p>To remove all tilt components of the box, refer to <a href="./option_untilt.html">option <code>-untilt</code></a>.</p>
-
 
 <h4>Default</h4>
 
