@@ -24,13 +24,15 @@
 
 <p>Dans le cadre d'un modèle ionique c&oelig;ur-coquille, chaque ion est décrit par un c&oelig;ur central (généralement de charge positive) lié à une coquille (shell) imitant le nuage électronique (chargé négativement). Cette option ré-associe les coquilles avec leurs c&oelig;urs, afin que chaque coquille soit correctement associée au c&oelig;ur correspondant.</p>
 
-<p>D'abord, si aucune coquille n'est définie dans le système, alors Atomsk recherche des atomes très proches (&#060;1&nbsp;&Aring;). Si deux atomes se trouvent très proches, alors celui avec la plus grande charge électrique, ou la plus grande masse, ou à défaut le premier qui apparaît dans la liste, est considéré comme le c&oelig;ur, et l'autre comme sa coquille associée.</p>
+<p>D'abord, si aucune coquille n'est définie dans le système, alors Atomsk recherche des atomes très proches (&#060;1,5&nbsp;&Aring;). Si deux atomes se trouvent très proches, alors celui avec la plus grande charge électrique, ou la plus grande masse, ou à défaut le premier qui apparaît dans la liste, est considéré comme le c&oelig;ur, et l'autre comme sa coquille associée.</p>
 
-<p>Ensuite, on considère que les listes des c&oelig;urs et coquilles se correspondent. Si la coquille se trouve déjà près du c&oelig;ur (à moins de 1,5 &Aring;) alors elle est considérée comme déjà associée. En revanche si la coquille se trouve loin du c&oelig;ur, alors ses images périodiques sont parcourues. Si une image périodique se trouve près du c&oelig;ur alors la position de la coquille est remplacée par celle de cette image. Ceci peut être utile lorsque des coquilles, mais pas leurs c&oelig;urs, ont été translatées d'un ou plusieurs vecteurs de boîte à cause de conditions aux limites périodiques.</p>
+<p>Ensuite, si des coquilles existent dans le système, alors il est supposé que les listes des c&oelig;urs et coquilles se correspondent. Si la coquille se trouve déjà près du c&oelig;ur (à moins de 1,5&nbsp;&Aring;) alors elle est considérée comme déjà associée. En revanche si la coquille se trouve loin du c&oelig;ur, alors ses images périodiques sont parcourues. Si une image périodique se trouve près du c&oelig;ur alors la position de la coquille est remplacée par celle de cette image. Ceci peut être utile lorsque des coquilles, mais pas leurs c&oelig;urs, ont été translatées d'un ou plusieurs vecteurs de boîte à cause de conditions aux limites périodiques.</p>
 
-<p>Sinon, si aucune image périodique ne semble être associée avec ce c&oelig;ur, alors cette coquille n'appartient pas à ce c&oelig;ur, et le reste de la liste des coquilles est parcourue. Si une autre coquille se trouve près du c&oelig;ur alors elle est associée à ce c&oelig;ur. Ceci peut être utile après avoir lu un fichier dans lequel les positions des c&oelig;urs et des coquilles sont écrits dans des ordres différents. Enfin, si aucune coquille n'est trouvée près du c&oelig;ur alors ce c&oelig;ur n'a aucune coquille.</p>
+<p>Sinon, si aucune image périodique ne semble être associée avec ce c&oelig;ur, alors cette coquille n'appartient pas à ce c&oelig;ur, et le reste de la liste des coquilles est parcourue. Si une autre coquille se trouve près du c&oelig;ur alors elle est associée à ce c&oelig;ur. Ceci peut être utile après avoir lu un fichier dans lequel les positions des c&oelig;urs et des coquilles sont écrits dans des ordres différents.</p>
 
-<p>Les coquilles doivent exister dans le système pour pouvoir appliquer cette option. Notez que les indices des coquilles, ainsi que leurs positions, peuvent être modifiés pour qu'elles correspondent à leurs c&oelig;urs. Les positions des c&oelig;urs ne sont pas changées par cette option.</p>
+<p>Enfin, si aucune coquille n'est trouvée près du c&oelig;ur alors ce c&oelig;ur n'a aucune coquille.</p>
+
+<p>En appliquant cette option, notez que les indices des coquilles, ainsi que leurs positions, peuvent être modifiés pour qu'elles correspondent à leurs c&oelig;urs. Les positions et indices des c&oelig;urs ne sont pas changées par cette option.</p>
 
 
 <h4>Défaut</h4>
