@@ -38,8 +38,6 @@
 
 <p>Pour appliquer une contrainte, référez-vous à l'<a href="./option_stress.html">option <code>-stress</code></a>.</p>
 
-<p>Pour supprimer toute inclinaison de la boîte, référez-vous à l'<a href="./option_untilt.html">option <code>-untilt</code></a>.</p>
-
 
 <h4>Défaut</h4>
 
