@@ -15,6 +15,7 @@ Master
 - progress bars can now be customized with a new keyword in configuration file (atomsk.conf).
 - fixed a bug in mode "--merge" that was causing a segfault when the first system did not contain comments. Thanks to Abhay Vincent, Cranfield University, UK, for pointing out this bug.
 - fixed bugs in mode "--nye", where there was a sign error in the computation of the Nye tensor. Also attempted to tune computation parameters to improve accuracy in non-fcc materials. User can now specify parameters for the computation (NeighFactor, theta_max, NNmin, ) in a configuration file "atomsk.conf". Thanks to Houssam Kharouji and Vincent Taupin, LEM3, Univ. Lorraine, France, for helping improve the computation of Nye tensor.
+- fixed bugs in option "-bind-shells" where, when a system did not contain shells, particles too close to one another were not properly detected as core and shell, or charges were not attributed properly.
 - fixed a bug in option "-cell" where the keyword "xyz" would cause some components to become NaN in orthogonal cells.
 - fixed a bug in option "-disturb", where displacements would not be random when running on several threads; thanks to Milan Kočí, Institute of Physics v.v.i., Academy of Sciences, Prague, Czech Republic, for pointing out this bug. Also fixed a bug where, when user provided only one value dmax, then maximum displacements were equal to that value along all directions (i.e. using "-disturb <dmax>" lead to dx=dy=dz=dmax); this is now fixed so that the norm of max.disp. is equal to dmax (i.e. sqrt(dx²+dy²+dz²)=dmax).
 - fixed a bug in option "-select", where program could be stalled in infinite loop under certain conditions. Thanks to Jan Drahokoupil, Institute of Physics v.v.i., Academy of Sciences, Prague, Czech Republic, for pointing out this bug. Also fixed a bug when selecting according to a 3-D shape from STL file, where some atoms below edges of triangles were not correctly selected or un-selected. Thanks to Huajia Zhu, University College London, UK, for pointing out this bug.
